AdvancedCourse/src/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kc-spring-service
spec:
  type: ClusterIP
  selector:
    app: kc-spring-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
